--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -3,20 +3,22 @@
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #fafafa;
+  background-color: #ebebeb;
   color: #212121;
   line-height: 1.5;
 }
 
 #search-box {
   font: inherit;
-  padding: 8px;
+  padding: 12px;
   max-width: 320px;
   margin-bottom: 16px;
+  border-radius: 10px;
+  border: 1px solid #00166e;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .content__wrapper {
@@ -29,7 +31,8 @@ body {
 .country-item > p,
 h1 {
   margin: 0;
-  padding: 0;
+  padding: 10px;
+  font-size: 30px;
 }
 
 .country-info_item {
@@ -38,14 +41,13 @@ h1 {
 }
 
 .country-info_item > p {
-  margin-left: 8px;
 }
 
 .country-item {
   display: flex;
   align-items: center;
+  font-size: 30px;
 }
 
 .country-item > p {
-  margin-left: 8px;
 }
